[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-ram-flow"
version = "0.1.0"
description = "A high-precision memory flow tracker with premium HTML reporting"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "addonol", email = "addonol.github@example.com" }]
license = { text = "MIT" }
keywords = ["memory", "profiler", "tracking", "django", "oracle", "audit"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Debuggers",
    "Intended Audience :: Developers",
]
dependencies = [
    "psutil>=5.9.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/addonol/python-ram-flow"
Repository = "https://github.com/addonol/python-ram-flow.git"
Issues = "https://github.com/addonol/python-ram-flow/issues"

[tool.hatch.build.targets.wheel]
packages = ["ramflow"]

[tool.hatch.build]
exclude = [
    "/examples",
    "/assets",
    "/.github",
    "/.pre-commit-config.yaml",
    "/SECURITY.md",
    "uv.lock",
]

[dependency-groups]
dev = [
    "ruff",
    "django>=5.2.13",
    "pre-commit"
]

[tool.ruff]
line-length = 88
target-version = "py310"
